[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/PlayerCharacter/PlayerCharacter.png" type="Texture" id=1]
[ext_resource path="res://Characters/PlayerCharacter/PlayerCharacter.gd" type="Script" id=2]
[ext_resource path="res://Characters/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collisions/Collider.gd" type="Script" id=5]
[ext_resource path="res://Characters/PlayerCharacter/HitBox.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id=4]

[node name="PlayerCharacter" type="KinematicBody2D"]
collision_layer = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Collider" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="ColliderShape" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource( 6 )

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 4 )

[node name="AttackCooldownTimer" type="Timer" parent="HitBox"]

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 100
damage = 2

[node name="UpdatePathToEnemyTimer" type="Timer" parent="."]

[connection signal="mouse_exited" from="Collider" to="Collider" method="_on_Collider_mouse_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="HitBox/AttackCooldownTimer" to="HitBox" method="_on_AttackCooldownTimer_timeout"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
[connection signal="timeout" from="UpdatePathToEnemyTimer" to="." method="_on_UpdatePathToEnemyTimer_timeout"]
